5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1807_2563.log
== TEST (2019-06-04 17:40:37) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	aprovados = 0
	if(media_finais[i] = 5):
		for elemento in vet:
		aprovados = aprovados + 1
print(aprovados)
-- ERROR:
File "XXXX", line 6
    if(media_finais[i] = 5):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:40:46) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	aprovados = 0
	if(media_finais[i] == 5):
		for elemento in vet:
		aprovados = aprovados + 1
print(aprovados)
-- ERROR:
File "XXXX", line 8
    aprovados = aprovados + 1
            ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:40:57) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	aprovados = 0
	if(media_finais[i] == 5):
		for elemento in vet:
			aprovados = aprovados + 1
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:41:29) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
while(size(media_finais) > 1):
	aprovados = 0
	if(media_finais[i] == 5):
		for elemento in vet:
			aprovados = aprovados + 1
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:43:02) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
while(size(media_finais) > 1):
	aprovados = 0
	for elemento in vet:
		if(media_finais[i] == 5):
			aprovados = aprovados + 1
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:43:09) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
while(size(media_finais) > 1):
	aprovados = 0
	for elemento in vet:
		if(media_finais[i] == 5):
			aprovados = aprovados + 1
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:43:36) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
while(size(media_finais) > 1):
	aprovados = 0
	for elemento in media_finais:
		if(media_finais[i] == 5):
			aprovados = aprovados + 1
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:45:02) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
while(size(media_finais) > 1):
	aprovados = 0
	for elemento in media_finais:
		if(media_finais[i] >= 5 and media_finais[i]):
			aprovados = aprovados + 1
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:45:16) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
while(size(media_finais) > 1):
	aprovados = 0
	for elemento in media_finais:
		if(media_finais[i] >= 5 and media_finais[i] < 7):
			aprovados = aprovados + 1
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:45:22) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
while(size(media_finais) > 1):
	aprovados = 0
	for elemento in media_finais:
		if(media_finais[i] >= 5 and media_finais[i] < 7):
			aprovados = aprovados + 1
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:46:58) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
		i = i + 1
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:47:55) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	i = i + 1
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:48:32) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	i = i + 1
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:48:40) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	i = i + 1
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:49:06) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	i = i + 1
	
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:49:44) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	i = i + 1
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))
	print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:50:41) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	print(aprovados)
	i = i + 1
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:51:13) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
		print(aprovados)
	i = i + 1
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:52:04) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
		print(aprovados)
	else:
		print(aprovados)
	i = i + 1
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:52:42) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
		print(aprovados)
	#else:
	#	print(aprovados)
	i = i + 1
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:52:53) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
		print(aprovados)
	#else:
	#	print(aprovados)
	i = i + 1
	#media_finais = array(eval(input("medias finais dos alunos matriculados:")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:53:08) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
		print(aprovados)
	#else:
	#	print(aprovados)
	i = i + 1
	#media_finais = array(eval(input("medias finais dos alunos matriculados:")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:54:02) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	print(aprovados)
	#else:
	#	print(aprovados)
	i = i + 1
	#media_finais = array(eval(input("medias finais dos alunos matriculados:")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:54:35) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	#else:
	#	print(aprovados)
	i = i + 1
	#media_finais = array(eval(input("medias finais dos alunos matriculados:")))
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:54:40) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	#else:
	#	print(aprovados)
	i = i + 1
	#media_finais = array(eval(input("medias finais dos alunos matriculados:")))
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 17:55:15) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	#else:
	#	print(aprovados)
	i = i + 1
	#media_finais = array(eval(input("medias finais dos alunos matriculados:")))
print(aprovados)
-- EXECUTION TIME:
1.10981
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:55:23) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	#else:
	#	print(aprovados)
	i = i + 1
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:55:33) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	#else:
	#	print(aprovados)
	i = i + 1
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:55:33) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	#else:
	#	print(aprovados)
	i = i + 1
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:55:35) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	#else:
	#	print(aprovados)
	i = i + 1
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:56:04) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	#else:
	#	print(aprovados)
	i = i + 1
print(aprovados)
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:57:10) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	#else:
	#	print(aprovados)
	i = i + 1
	print(aprovados)
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 17:57:21) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
aprovados = 0
while(size(media_finais) > 1 and i < size(media_finais)):
	if(media_finais[i] >= 5 and media_finais[i] < 7):
		aprovados = aprovados + 1
	#else:
	#	print(aprovados)
	i = i + 1
	print(aprovados)
	media_finais = array(eval(input("medias finais dos alunos matriculados:")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 18:00:06) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
while(size(media_finais) > 1):
	aprovados = 0
	for elemento in media_finais:
		if(media_finais[i] >= 5):
	aprovados = aprovados + 1
print(aprovados)
-- ERROR:
File "XXXX", line 8
    aprovados = aprovados + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 18:00:12) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
while(size(media_finais) > 1):
	aprovados = 0
	for elemento in media_finais:
		if(media_finais[i] >= 5):
		aprovados = aprovados + 1
print(aprovados)
-- ERROR:
File "XXXX", line 8
    aprovados = aprovados + 1
            ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 18:00:16) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
while(size(media_finais) > 1):
	aprovados = 0
	for elemento in media_finais:
		if(media_finais[i] >= 5):
			aprovados = aprovados + 1
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 18:02:10) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
while(size(media_finais) > 1):
	aprovados = 0
	for elemento in media_finais:
		if(media_finais[i] >= 5):
			aprovados = aprovados + 1
print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 18:02:37) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))
i = 0
while(size(media_finais) > 1):
	aprovados = 0
	for elemento in media_finais:
		if(media_finais[i] >= 5):
			aprovados = aprovados + 1
	print(aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 20:54:31) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if(media_finais[i] >= 5 and media_finais[i] < 7):
			aprovados = aprovados + 1
			
	print(aprovados)
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 20:56:13) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if(media_finais[i] >= 5 and media_finais[i] < 7):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- EXECUTION TIME:
1.15831
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2563/main.py", line 9, in <module>
    if(media_finais[i] >= 5 and media_finais[i] < 7):
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 20:57:20) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if(elemento >= 5 and elemento < 7):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 20:57:40) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if(elemento >= 5 and elemento < 7):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 20:58:32) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if(elemento >= 5 and elemento < 7):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:00:35) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if(elemento >= 5):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:00:44) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if(elemento >= 5):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:01:50) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if(elemento >= 5):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:02:51) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if(elemento >= 5 and elemento < 7):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:04:14) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:05:09) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:05:27) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:05:41) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:05:59) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_medias = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:07:45) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 21:08:52) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("proximas medias:")))
-- EXECUTION TIME:
1.16272
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 15:58:48) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("proximas medias:")))
-- EXECUTION TIME:
1.32476
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:00:55) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:01:27) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 16:01:41) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):
	
	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("proximas medias:")))
-- EXECUTION TIME:
1.20691
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:03:25) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:11:04) 
-- CODE:
from numpy import*
media_finais = array(eval(input("medias finais dos alunos matriculados:")))

while(size(media_finais) > 1):

	aprovados = 0
	
	for elemento in media_finais:
		if( 5 <= elemento < 7 ):
			aprovados = aprovados + 1
			
	print(aprovados)
	
	media_finais = array(eval(input("proximas medias:")))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
